test/zinc_source/compile_errors/enums/10_enum_dict_key.zn
// expected-error: dict key cannot be an enum in v1
enum Status {
    Idle
}

fn main() {
    data = { Status.Idle: 1 }
    print("{data.len()}")
}
